<resources>
    <string name="app_name">LoveCalculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="love_calculator">Love Calculator</string>
    <string name="you">You</string>
    <string name="me">Me</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="calculate">Calculate</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="your_score">Your Score</string>
    <string name="_0">0</string>
    <string name="enter_boy_name">Enter boy name:</string>
    <string name="enter_girl_name">Enter girl name:</string>
    <string name="dao">dao</string>
</resources>