<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".loveCalculator.LoveCalculatorFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/img_love"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        app:lottie_rawRes="@raw/birds"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_love"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/love_calculator"
        android:textColor="@color/blue"
        android:textSize="32sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_love" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/et_first_name"
        app:layout_constraintStart_toStartOf="@id/et_first_name"/>

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textStyle="italic"
        android:textColorHint="@color/black"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/corner"
        android:hint="@string/enter_boy_name"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_love" />
    <TextView
        android:id="@+id/tv_second_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_name"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"

        app:layout_constraintTop_toBottomOf="@id/et_first_name"
        app:layout_constraintStart_toStartOf="@id/et_second_name"/>
    <EditText
        android:id="@+id/et_second_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/corner"
        android:hint="@string/enter_girl_name"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_second_name"
         />
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_calculate"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_second_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="28dp"
        app:cornerRadius="100dp"
        android:backgroundTint="@color/blue"
        android:text="@string/calculate"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="12dp"/>
    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/heart_svg"
        app:layout_constraintBottom_toTopOf="@id/tv_home"
        app:layout_constraintStart_toStartOf="@id/tv_home"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tv_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="12dp"/>

    <ImageView
        android:id="@+id/image_history"
        android:src="@drawable/bottom_history"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintEnd_toEndOf="@id/tv_history"
        app:layout_constraintBottom_toTopOf="@id/tv_history"
        app:layout_constraintStart_toStartOf="@id/tv_history"
        android:contentDescription="@string/todo" />





</androidx.constraintlayout.widget.ConstraintLayout>