<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".resultLove.ResultLoveFragment">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/img_result"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"

        app:lottie_loop="true"
        app:lottie_rawRes="@raw/hugging" />

    <TextView
        android:id="@+id/result_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/you"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_result" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/love_you"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_you" />

    <TextView
        android:id="@+id/result_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/me"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img" />

    <TextView
        android:id="@+id/tv_your_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_score"
        android:textColor="@color/pink"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_me" />

    <ImageView
        android:id="@+id/heart_pink"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/heart_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_your_score" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/heart_pink"
        app:layout_constraintEnd_toEndOf="@id/heart_pink"
        app:layout_constraintStart_toStartOf="@id/heart_pink"
        app:layout_constraintTop_toTopOf="@id/heart_pink" />


    <com.google.android.material.button.MaterialButton
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/blue"
        android:text="Try Again"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heart_pink" />


    <TextView
        android:id="@+id/tv_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/home"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/heart_svg"
        app:layout_constraintBottom_toTopOf="@id/tv_home"
        app:layout_constraintStart_toStartOf="@id/tv_home" />

    <TextView
        android:id="@+id/tv_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/history"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/bottom_history"
        app:layout_constraintBottom_toTopOf="@id/tv_history"
        app:layout_constraintEnd_toEndOf="@id/tv_history"
        app:layout_constraintStart_toStartOf="@id/tv_history" />


</androidx.constraintlayout.widget.ConstraintLayout>